# tai-dynamic-postgres-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  readme.md
src/tai_dynamic_postgres_mcp/cli/: args_parser.py  main.py
src/tai_dynamic_postgres_mcp/config/: settings.py
src/tai_dynamic_postgres_mcp/core/: app.py
src/tai_dynamic_postgres_mcp/database/: connection.py  helpers.py
src/tai_dynamic_postgres_mcp/tools/: helpers.py
