[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tai-dynamic-postgres-mcp"
version = "0.4.3"
description = "dynamic PostgreSQL DML MCP Server"
authors = [{ name = "Tai42", email = "daniel@cain-technologies.com" }]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "click~=8.2.1",
    "psycopg[binary]~=3.2.9",
    "psycopg[pool]~=3.2.6",
    "python-dotenv~=1.1.1",
    "pydantic-settings~=2.10.1",
    "pydantic~=2.11.7",
    "fastmcp~=2.10.6",
    "async-lru~=2.0.5"
]

[project.entry-points.console_scripts]
tai-postgres-mcp = "tai_dynamic_postgres_mcp.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

